--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,132 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-100">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blood & Valor - Kingdom Strategy Game</title>
-  <!-- Tailwind CSS from CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-full">
-  <div class="container mx-auto p-4">
-    <!-- Header -->
-    <header class="bg-red-800 text-white p-4 rounded shadow mb-6">
-      <h1 class="text-3xl font-bold">Blood & Valor</h1>
-      <p class="text-lg">Kingdom Strategy Game</p>
-    </header>
-
-    <!-- Authentication Section -->
-    <div id="auth">
-      <!-- Registration Form -->
-      <div id="registerForm" class="mb-6 p-4 bg-white rounded shadow">
-        <h2 class="text-xl font-semibold mb-4">Register</h2>
-        <form id="register" class="space-y-3">
-          <input type="text" id="regPlayerId" placeholder="Player ID" class="p-2 border rounded w-full" required>
-          <input type="text" id="regName" placeholder="Name" class="p-2 border rounded w-full" required>
-          <input type="password" id="regPassword" placeholder="Password" class="p-2 border rounded w-full" required>
-          <button type="submit" class="w-full bg-green-600 hover:bg-green-700 p-2 text-white rounded">Register</button>
-        </form>
-      </div>
-
-      <!-- Login Form -->
-      <div id="loginForm" class="mb-6 p-4 bg-white rounded shadow">
-        <h2 class="text-xl font-semibold mb-4">Login</h2>
-        <form id="login" class="space-y-3">
-          <input type="text" id="loginPlayerId" placeholder="Player ID" class="p-2 border rounded w-full" required>
-          <input type="password" id="loginPassword" placeholder="Password" class="p-2 border rounded w-full" required>
-          <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 p-2 text-white rounded">Login</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Game Section (hidden by default) -->
-    <div id="game" class="hidden p-4 bg-white rounded shadow">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-semibold">Welcome, <span id="playerName"></span>!</h2>
-        <button id="logout" class="bg-red-600 hover:bg-red-700 text-white p-2 rounded">Logout</button>
-      </div>
-      <!-- Resources Display -->
-      <div id="resources" class="mb-6">
-        <p>💰 Coin: <span id="coin">100</span></p>
-        <p>🌲 Wood: <span id="wood">50</span></p>
-        <p>🪨 Stone: <span id="stone">30</span></p>
-        <p>⛓ Iron: <span id="iron">10</span></p>
-        <p>📜 Royal Decrees: <span id="decrees">1</span></p>
-        <p>💖 Well-being: <span id="wellbeing">80%</span></p>
-        <p>🍞 Food: <span id="food">200</span></p>
-      </div>
-      <!-- Placeholder for Game Map or Additional Controls -->
-      <div id="mapArea">
-        <h3 class="text-lg font-semibold mb-2">World Map</h3>
-        <div id="map" class="grid grid-cols-8 gap-2">
-          <!-- Example static tiles; dynamic generation goes here later -->
-          <div class="w-20 h-20 bg-green-400 text-xs flex items-center justify-center rounded">Plains</div>
-          <div class="w-20 h-20 bg-yellow-400 text-xs flex items-center justify-center rounded">Desert</div>
-          <div class="w-20 h-20 bg-blue-400 text-xs flex items-center justify-center rounded">Ocean</div>
-          <div class="w-20 h-20 bg-gray-600 text-white text-xs flex items-center justify-center rounded">Mountain</div>
-          <div class="w-20 h-20 bg-green-700 text-xs flex items-center justify-center rounded">Forest</div>
-          <div class="w-20 h-20 bg-emerald-700 text-xs flex items-center justify-center rounded">Marsh</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- JavaScript to handle login, registration, and toggling UI -->
-  <script>
-    // Registration Form Handler
-    document.getElementById('register').addEventListener('submit', async function(e) {
-      e.preventDefault();
-      const playerId = document.getElementById('regPlayerId').value;
-      const name = document.getElementById('regName').value;
-      const password = document.getElementById('regPassword').value;
-
-      try {
-        const res = await fetch('http://localhost:8000/register/', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({player_id: playerId, name, password})
-        });
-        const data = await res.json();
-        alert(data.message);
-      } catch (err) {
-        console.error(err);
-        alert('Registration failed!');
-      }
-    });
-
-    // Login Form Handler
-    document.getElementById('login').addEventListener('submit', async function(e) {
-      e.preventDefault();
-      const playerId = document.getElementById('loginPlayerId').value;
-      const password = document.getElementById('loginPassword').value;
-
-      try {
-        const res = await fetch('http://localhost:8000/login/', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({player_id: playerId, password})
-        });
-        const data = await res.json();
-        if (data.message) {
-          alert(data.message);
-          // Hide auth forms and show game area
-          document.getElementById('auth').classList.add('hidden');
-          document.getElementById('game').classList.remove('hidden');
-          document.getElementById('playerName').innerText = playerId;
-        } else {
-          alert('Login failed!');
-        }
-      } catch (err) {
-        console.error(err);
-        alert('Login failed!');
-      }
-    });
-
-    // Logout Handler
-    document.getElementById('logout').addEventListener('click', function() {
-      document.getElementById('game').classList.add('hidden');
-      document.getElementById('auth').classList.remove('hidden');
-    });
-  </script>
+<body>
+  <div id="root"></div>
 </body>
 </html>
