--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,9 @@
   <title>Blood & Valor - Kingdom Strategy Game</title>
 </head>
 <body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
   <div id="root"></div>
 </body>
 </html>
